--- a/helium-core-v26/pom.xml
+++ b/helium-core-v26/pom.xml
@@ -370,6 +370,12 @@
 			<version>1.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-plugin-api</artifactId>
 			<version>${helium.version}</version>
