--- a/helium-core/pom.xml
+++ b/helium-core/pom.xml
@@ -19,11 +19,11 @@
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
+		<!--dependency>
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-log4j12</artifactId>
 		   <version>${slf4j.version}</version>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>ma.glasnost.orika</groupId>
 			<artifactId>orika-core</artifactId>
@@ -57,6 +57,12 @@
 			<groupId>jboss</groupId>
 			<artifactId>jboss-annotations-ejb3</artifactId>
 			<version>4.2.2.GA</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
