--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,6 @@
 		<module>helium-core-api</module>
 		<module>helium-hibernate-entitymanager</module>
 		<module>helium-applet</module>
+		<module>helium-selenium</module>
 	</modules>
 </project>
