--- a/helium-selenium-integraciones/pom.xml
+++ b/helium-selenium-integraciones/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.conselldemallorca</groupId>
 	<parent>
 		<groupId>net.conselldemallorca</groupId>
 		<artifactId>helium</artifactId>
@@ -16,6 +15,12 @@
 			<version>1.4</version>
 			<type>jar</type>
 			<scope>compile</scope>
+			<exclusions>
+	            <exclusion>
+	                <artifactId>axis-wsdl4j</artifactId>
+	                <groupId>axis</groupId>
+	            </exclusion>
+	        </exclusions>
 		</dependency>
 	</dependencies>
 	<build>
