--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -6,21 +6,15 @@ test.executar.suite.configuracio=true
 
 # Drivers de los navegadores
 # Windows
-# webdriver.chrome.driver=src\\test\\resources\\es\\caib\\sifog\\drivers\\windows\\chromedriver.exe
-# webdriver.ie.driver=src\\test\\resources\\es\\caib\\sifog\\drivers\\windows\\IEDriverServer.exe
+webdriver.chrome.driver=src\\test\\resources\\es\\caib\\sifog\\drivers\\windows\\chromedriver.exe
+webdriver.ie.driver=src\\test\\resources\\es\\caib\\sifog\\drivers\\windows\\IEDriverServer.exe
 # Linux
-webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedriver
+#webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedriver
 
 # Adreça - usuari del test
 test.base.url.configuracio=http://admin:admin@localhost:8080/helium/index.html
 test.base.url.disseny=http://admin:admin@localhost:8080/helium/index.html
 test.base.url.feina=http://admin:admin@localhost:8080/helium/index.html
-
-
-
-
-
-
 
 test.base.usuari.configuracio=admin
 test.base.usuari.configuracio.nom=Usuari Administrador
@@ -36,8 +30,11 @@ test.base.group=pruebas
 test.base.group.tipo=tipo de pruebas
 
 # Entorn
-entorn.nom=Selenium
-entorn.titol=Entorn de proves Selenium
+#entorn.nom=Selenium
+#entorn.titol=Entorn de proves Selenium
+#entorn.nom=proves_selenium_jav
+entorn.nom=proves_selenium
+entorn.titol=Entorn de proves Selenium Javi
 
 # Importación de tipos de expediente
 deploy.definicio.proces.nom=expexe
@@ -102,3 +99,23 @@ tramit.usuari.codi1=u03420
 tramit.document.nom1=Nom document 1
 tramit.docadjunt.arxiu1=c:/docAdjunt.docx
 tramit.docadjunt.nom1=Nom document adjunt 1
+
+# Portasignatures
+deploy.arxiu.portasignatures=src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
+app.portasignatures.plugin.url=http://localhost:8080/helium-selenium-integraciones/services/CWS
+app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
+app.portasignatures.plugin.usuari=HELIUM
+app.portasignatures.plugin.password=HELIUM
+
+# Custodia
+deploy.arxiu.custodia=src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
+app.custodia.plugin.filesystem.basedir=c:/server/helium/custodia/
+app.custodia.plugin.caib.url=http://localhost:8080/helium-selenium-integraciones/services/CustodiaDocumentos
+app.custodia.plugin.caib.usuari=HELIUM
+app.custodia.plugin.caib.password=HELIUMABC
+app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
+
+# Tramitación
+app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
